2019-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve subscripting of suffixes in history
	
2019-07-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "to unicode" conversion

2019-07-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add support for text arguments when hiding default function values in output
	* Fix italicization of symbol when function argument

2019-06-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for bases > 36, negative bases, and non-integer bases
	* Reduce length of expressions in messages (primarily when using high precision)
	* Fix right-click action for cursor right and left keypad buttons

2019-06-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Change programming keypad toggle button text/icon
	* Add import definitions file to file menu
	* Make most dialogs resizable

2019-05-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix display of number in sexagesimal base or time format

2019-05-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Keyboard shortcut for smart parentheses (Ctrl + parenthesis)

2019-05-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix line breaks placed within Unicode characters in some cases
	* Shorten extremely long lines (> 50 000 characters) in history
	* Take into account line length (since line breaks now is dynamic) when calculating history limit
	* Unmark parentheses when automatically selecting whole expression
	* Only use bold parentheses highlighting if text width does not change
	* Continuous delete when long-pressing DEL button

2019-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix invalid text iterators on rapid input
	* Menu item context menu for deletion and update of meta modes
	* Do not require confirmation on deletion of variables and history bookmarks from context menu

2019-05-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* History bookmarks and protect (from disappearing of the end of the list) option
