@@ -259,7 +259,6 @@
                         <child internal-child="entry">
                           <object class="GtkEntry" id="set_base_entry_output_other">
                             <property name="can_focus">True</property>
-                            <property name="text" translatable="yes">Unicode</property>
                             <signal name="activate" handler="on_set_base_entry_output_other_activate" swapped="no"/>
                             <signal name="focus-out-event" handler="on_set_base_entry_output_other_focus_out_event" swapped="no"/>
                           </object>
