@@ -1,7 +1,12 @@
+2019-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Hide "Abbreviate Names" in popup menu when appropriate and add separator
+	* Show custom base result popup menu item
+
 2019-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Improve subscripting of suffixes in history
-	
+
 2019-07-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add "to unicode" conversion
